package com.residencial.residencial.model.enums;

public enum TipoHabitacion {
    ESTANDAR, VIP, SUPER_VIP
}
