classDiagram
    direction TB

    class Usuario {
        username
        password
        rol
    }

    class Rol {
        <<enumeration>>
        CLIENTE
        RECEPCIONISTA
        ADMINISTRADOR
    }

    class Cliente {
        nombre
        documento
        telefono
        email
    }

    class Reserva {
        fechaEntrada
        fechaSalida
        estado
        /total
    }

    class Habitacion {
        numero
        estado
    }

    class TipoHabitacion {
        <<enumeration>>
        ESTANDAR
        VIP
        SUPER_VIP
    }

    class Pago {
        monto
        fecha
        metodoPago
    }

    Usuario "1" -- "1" Rol : Tiene >
    Cliente "1" -- "*" Reserva : Realiza >
    Reserva "*" -- "1" Habitacion : Se-asigna-a >
    Habitacion "*" -- "1" TipoHabitacion : Descrita-por >
    Reserva "1" -- "0..1" Pago : Pagada-mediante >